<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.sleeplessknights.donence.ui.request.RequestFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_request" />

        <RadioGroup
            android:id="@+id/radioGroup_request"
            android:layout_width="295dp"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/radio_plastic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_plastic" />

            <CheckBox
                android:id="@+id/radio_paper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_paper" />

            <CheckBox
                android:id="@+id/radio_glass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_glass" />

            <CheckBox
                android:id="@+id/radio_battery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_battery" />

            <CheckBox
                android:id="@+id/radio_electronic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_electronic" />

            <CheckBox
                android:id="@+id/radio_oil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_oil" />

        </RadioGroup>

        <Button
            android:id="@+id/button_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.onClicked()}"
            android:text="@string/done" />

        <Button
            android:id="@+id/button_recycle_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.onShowRecyclePoints()}"
            android:text="@string/recycle_points" />
    </LinearLayout>

</layout>