<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sleeplessknights.donence.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sleeplessknights.donence.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/activity_profile" />

    <fragment
        android:id="@+id/navigation_request"
        android:name="com.sleeplessknights.donence.ui.request.RequestFragment"
        android:label="@string/title_request"
        tools:layout="@layout/fragment_request" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.sleeplessknights.donence.ui.requestlist.RequestListFragment"
        android:label="Request List"
        tools:layout="@layout/fragment_requestlist" />

</navigation>